--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automating with cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
