--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Automating with cypress",
   "main": "index.js",
   "scripts": {
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy.run":"cypress run",
   },
   "repository": {
     "type": "git",
